--- a/config.yaml
+++ b/config.yaml
@@ -149,6 +149,7 @@ orgs:
     - robert-groensfeld
     - tschei65
     - seejaybee
+    - jdbg0e
     teams:
       Organization Managers:
         description: Baloise GitHub Organization Managers
